# GPX-Math-Library

./: CMakeLists.txt  LICENSE.txt  README.md
Samples/: FloatArrayToMatrix.cpp  MatrixInverse.cpp  MatrixMultiplication.cpp  MatrixRotation.cpp  MatrixRotations.cpp  MatrixScale.cpp  MatrixTranslation.cpp  MatrixTranspose.cpp  QuaternionTransformation.cpp  TrigonometryFunction.cpp
include/gpx_cpp/math/: MathUtils.hpp  Matrix.hpp  Quaternion.hpp  Sqrt.hpp  Trigonometry.hpp  Vector.hpp
src/gpx_cpp/math/: MathUtils.cpp  Matrix.cpp  Quaternion.cpp  Sqrt.cpp  Trigonometry.cpp  Vector.cpp
